// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SongTitle Component > renders with custom title and artist 1`] = `
<div
  class="flex flex-col items-start text-left"
>
  <h2
    class="text-lg font-bold text-[var(--color-azure)] -ml-1"
  >
    Test Song
  </h2>
  <p
    class="text-sm text-[var(--color-amethyst)] -ml-1"
  >
    Test Artist
  </p>
</div>
`;

exports[`SongTitle Component > renders with default props 1`] = `
<div
  class="flex flex-col items-start text-left"
>
  <h2
    class="text-lg font-bold text-[var(--color-azure)] -ml-1"
  >
    Song Title
  </h2>
  <p
    class="text-sm text-[var(--color-amethyst)] -ml-1"
  >
    Artist
  </p>
</div>
`;

exports[`SongTitle Component > renders with only artist 1`] = `
<div
  class="flex flex-col items-start text-left"
>
  <h2
    class="text-lg font-bold text-[var(--color-azure)] -ml-1"
  >
    Song Title
  </h2>
  <p
    class="text-sm text-[var(--color-amethyst)] -ml-1"
  >
    Artist Only
  </p>
</div>
`;

exports[`SongTitle Component > renders with only title 1`] = `
<div
  class="flex flex-col items-start text-left"
>
  <h2
    class="text-lg font-bold text-[var(--color-azure)] -ml-1"
  >
    Title Only
  </h2>
  <p
    class="text-sm text-[var(--color-amethyst)] -ml-1"
  >
    Artist
  </p>
</div>
`;
